--- a/wa.user.css
+++ b/wa.user.css
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.4.0
+@version      2.4.1
 @license      MIT
 ==/UserStyle== */
 @-moz-document domain("web.whatsapp.com") {
@@ -42,15 +42,15 @@
     --bg-hue: 320deg;
     --bg-invert: 0;
     --chat-image: url("https://web.whatsapp.com/img/bg-chat-tile_9e8a2898faedb7db9bf5638405cf81ae.png");
-    --chat-bg-o: 0.1;
+    --chat-bg-o: 0.15;
     --chat-bg-i: 0.6;
     --c-m-hover: 0.6s;
     --c-m-delay: 1.2s;
     --blur-in: 0.4s;
     --blur-out: 0.2s;
     --ui-font: "custom font", "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial, Ubuntu, Cantarell, "Fira Sans", sans-serif;
-    --version: "Dark-WhatsApp v2.4.0 — April 21st, 2020";
-    --message: "Small maintenance update, more info in the changelog. 🎉 🥳 I rewrote my Dark-Instagram theme, check it out at link below.";
+    --version: "Dark-WhatsApp v2.4.1 — April 28th, 2020";
+    --message: "Fixed latest update, more info in the changelog. 🎉 🥳 I rewrote my Dark-Instagram theme, check it out at link below.";
     --changes: "https://github.com/vednoc/dark-instagram";
   }
   @supports (-moz-user-select: none) {
@@ -288,7 +288,7 @@
     background-color: var(--darker) !important;
   }
   body span[title *= "typing..."],
-  body ._2ZAIy {
+  body .vdXUe {
     color: var(--accent) !important;
   }
   .matched-text:not(#z) {
@@ -618,6 +618,13 @@
     background-color: var(--accent) !important;
     box-shadow: var(--bshadow);
   }
+  .overlay [data-animate-modal-popup]:not(._2ILbv) .copyable-area.r3Nu1,
+  .overlay [data-animate-modal-popup]:not(._2ILbv) .copyable-area._1dGTK {
+    border-left: none !important;
+  }
+  ._3UUn3 {
+    background-color: var(--darken) !important;
+  }
   .overlay [data-animate-modal-popup]:not(._2ILbv) span[role = "button"] {
     color: var(--accent) !important;
   }
@@ -643,7 +650,10 @@
     background-color: var(--darken) !important;
     box-shadow: var(--bshadow);
   }
-  .overlay [data-animate-modal-body] ._2HyTU,
+  .overlay [data-animate-modal-body] ._2LALH span:hover {
+    opacity: 0.6;
+  }
+  .overlay [data-animate-modal-body] ._2hytu,
   .overlay [data-animate-modal-body] ._22aOT {
     min-height: 91px;
     background-color: var(--darken) !important;
@@ -714,6 +724,21 @@
     color: var(--light) !important;
     border-color: var(--darker) !important;
     background-color: var(--darken) !important;
+  }
+  [style *= "d-color: rgb(237, 233, 228)"] {
+    position: relative;
+  }
+  [style *= "d-color: rgb(237, 233, 228)"]::before {
+    content: "Use this for Dark-WhatsApp";
+    position: absolute;
+    font-size: 15px;
+    width: 100%;
+    color: #000 !important;
+  }
+  [style *= "rgb(222, 227, 233)"],
+  [style *= "rgb(217, 218, 222)"],
+  [style *= "rgb(192, 193, 196)"] {
+    background-color: var(--dark) !important;
   }
   [data-animate-status-v3-modal-background = "true"] {
     background-color: var(--t) !important;
@@ -898,6 +923,7 @@
   span[class][data-icon = "exit"] path,
   span[class][data-icon = "thumbs-down"] path,
   span[class][data-icon = "delete-danger"] path,
+  span[class][data-icon = "status-miss_video"] path,
   span[class][data-icon ^= "miss"] path {
     fill: var(--red) !important;
   }
@@ -1285,12 +1311,8 @@
   ._1-iDe .copyable-area .MS-DH ._2-rkJ::before {
     color: var(--lighter) !important;
   }
-  ._1-iDe .copyable-area .MS-DH .tail,
-  ._1-iDe .copyable-area .MS-DH .tail > div[class] {
-    border-radius: 7.5px !important;
-  }
-  ._1-iDe .copyable-area .MS-DH .tail-container {
-    display: none !important;
+  ._1-iDe .copyable-area .MS-DH .tail-override-left [data-icon = "tail-out"] {
+    transform: rotateY(180deg) !important;
   }
   ._1-iDe .copyable-area #pane-side {
     background-color: var(--t) !important;
@@ -1461,8 +1483,13 @@
   ._2mlDB {
     border-color: var(--darken) !important;
   }
-  ._1-iDe._1xXdX ._2vPAk {
-    border-right: 1px solid var(--darker) !important;
+  ._14VS3 .copyable-area [data-list-scroll-container] ._1o1sm::before {
+    background-color: var(--t) !important;
+  }
+  @media screen and (max-width: 720px) {
+    ._1-iDe._1xXdX ._2vPAk {
+      border-right: 1px solid var(--darker) !important;
+    }
   }
   ._1-iDe._14VS3 > span {
     border-left: 1px solid var(--darker);
@@ -1654,10 +1681,12 @@
   ._2RBFb {
     background-color: var(--dark) !important;
   }
-  ._2DwXW {
+  ._2DwXW,
+  ._2DwXW span::before {
     color: var(--lighter) !important;
   }
-  ._3_nIn {
+  ._3_nIn,
+  ._3Kp0Q {
     background-color: rgba(85,85,85,0.063) !important;
   }
   a[href][target = "_blank"] > *,
@@ -1695,12 +1724,17 @@
   .message-out > div:not(._1rK-b) > div {
     box-shadow: none !important;
   }
-  .message-in .tail > .tail-container,
-  .message-out .tail > .tail-container {
-    width: unset;
-    height: unset;
-    border: 6px solid var(--t);
-    background: none !important;
+  .message-in [data-icon *= "tail"] svg path:first-child,
+  .message-out [data-icon *= "tail"] svg path:first-child {
+    fill: var(--shadow) !important;
+  }
+  .message-in [data-icon = "tail-in"] svg path:last-child,
+  .message-out [data-icon = "tail-in"] svg path:last-child {
+    fill: var(--msg-l) !important;
+  }
+  .message-in [data-icon = "tail-out"] svg path:last-child,
+  .message-out [data-icon = "tail-out"] svg path:last-child {
+    fill: var(--msg-r) !important;
   }
   .message-in [data-pre-plain-text] + div *,
   .message-out [data-pre-plain-text] + div *,
@@ -1724,10 +1758,6 @@
   .message-in ._1rK-b ._2Ll5c div,
   .message-out ._1rK-b ._2Ll5c div {
     color: inherit;
-  }
-  .message-in ._1rK-b :not(.tail) > div > ._2Hp95._1X6iJ ._2R8MP,
-  .message-out ._1rK-b :not(.tail) > div > ._2Hp95._1X6iJ ._2R8MP {
-    border-radius: 7.5px;
   }
   .message-in ._1lxsr,
   .message-out ._1lxsr,
@@ -1789,14 +1819,6 @@
     background-color: var(--msg-l) !important;
     box-shadow: 0 1px 0.5px var(--shadow) !important;
   }
-  .message-in .tail {
-    border-top-left-radius: 0 !important;
-  }
-  .message-in .tail > .tail-container {
-    border-radius: 4px 0 0 0;
-    border-top-color: var(--msg-l);
-    border-right-color: var(--msg-l);
-  }
   .message-in [role] > span[role = "button"] + span {
     color: var(--light) !important;
   }
@@ -1851,14 +1873,6 @@
   }
   .message-out > div._1rK-b ._2Ll5c {
     background-color: var(--msg-r) !important;
-  }
-  .message-out .tail {
-    border-top-right-radius: 0 !important;
-  }
-  .message-out .tail > .tail-container {
-    border-radius: 0 4px 0 0;
-    border-top-color: var(--msg-r);
-    border-left-color: var(--msg-r);
   }
   .message-out > div > span:last-child > div[style]:not(._1qhoQ) {
     background: linear-gradient(90deg, var(--t), var(--msg-r) 80%) !important;
