chat: fix context menu for RTL messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1752,6 +1752,8 @@
                     height: 22px i;
                     background: linear-gradient(90deg, t, left 80%) i;
                 }
+                /// RTL messages.
+                &.se9J6 { background: linear-gradient(90deg, left 50%, t) i }
                 /// Stickers.
                 /._1i1U7._1UyGF div[style *= 'opacity'] { c: 0 0 left }
                 /// Audio messages.
@@ -1803,6 +1805,8 @@
             > div > span:last-child > div[style] {
                 /// Exclude stickers.
                 &:not(._1qhoQ) { background: linear-gradient(90deg, t, right 80%) i }
+                /// RTL messages.
+                &.se9J6 { background: linear-gradient(90deg, right 50%, t) i }
                 /// Stickers.
                 /._1i1U7._1qhoQ div[style *= 'opacity'] { c: 0 0 right }
                 /// Shared contacts.
