chat: add an option for RTL message layout tweaks
Fixes inconsistencies in RTL layouts.

The fix is only applied to RTL messages so that LTR messages are left
as-is, and there is no need to disable this setting.

If there are issues, please let us know.

Relates to #107.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -32,6 +32,7 @@
     'Hide all                    ': 'hide          ',
 }
 
+@var checkbox fix_rtl    'Fix whitespace for RTL layout' 1
 @var select   chat_m_t   'Message tails style' {
     'Default  *': 'default ',
     'Minimal   ': 'minimal ',
@@ -1832,6 +1833,17 @@
             }
             /// Feat -> Align right bubble.
             if ( chat_right == 'start' ) { align-items: flex-start }
+        }
+        /// Feat -> Fixes for RTL layout. @upstream
+        if ( fix_rtl == 1 ) {
+            &-in .selectable-text.invisible-space[dir = 'rtl'] {
+                > span[class] { display: unset i }
+                &::before { width: 56px i }
+            }
+            &-out .selectable-text.invisible-space[dir = 'rtl'] {
+                > span[class] { display: unset i }
+                &::before { width: 76px i }
+            }
         }
     }
 
