modals: fix styles in header for status area modal

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -843,6 +843,9 @@
                 rad: r i;
                 border: 1px solid bd i;
             }
+            /// Header.
+            ._35Ai0 { c: fg }
+            ._3_-c_, ._1Ou9Y { c: cm }
             hr {
                 opacity: 1 i;
                 border: none i;
@@ -853,9 +856,6 @@
                 c: 0 0 hl;
                 box-shadow: 1px 0 bd;
                 @media (min-width: 1441px) { rad: r 0 0 r }
-                /// Text.
-                .OEFaY { c: cm }
-                ._26-u- { c: fg }
             }
             > div[class]:nth-child(2) {
                 ._2LuDL { c: cm }
