landing: fix platform-specific border color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -416,7 +416,7 @@
                 }
             }
             /// Platform-specific section border.
-            ._3ZVgT { c: 0 0 bd }
+            ._1TgXb { c: 0 0 bd }
         }
 
         /// Intro alert for desktop applications.
