--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1838,12 +1838,23 @@
         if ( fix_rtl == 1 ) {
             &-in .selectable-text.invisible-space[dir = 'rtl'] {
                 > span[class] { display: unset i }
-                &::before { width: 0px i }
-                &::after { height: 2.25 em }
+                @supports (-moz-user-select: none) {
+                    &::after { padding-bottom: 1em i }
+                    &::before { content: unset i }
+                }
+                @supports not (-moz-user-select: none) {
+                    &::after { height: 1em i; display: block i }
+                }
             }
             &-out .selectable-text.invisible-space[dir = 'rtl'] {
                 > span { display: unset i }
-                &::after { height: 2.25 em }
+                @supports (-moz-user-select: none) {
+                    &::after { padding-bottom: 1em i }
+                    &::before { content: unset i }
+                }
+                @supports not (-moz-user-select: none) {
+                    &::after { height: 1em i; display: block i }
+                }
             }
         }
     }
