--- a/wa.user.styl
+++ b/wa.user.styl
@@ -32,7 +32,9 @@
     'Hide all                    ': 'hide          ',
 }
 
-@var checkbox fix_rtl    'Fix whitespace for RTL layout' 1
+@var checkbox rtl_header 'Fix message header in RTL layout' 1
+@var checkbox rtl_layout 'Fix message content for RTL layout' 1
+
 @var select   chat_m_t   'Message tails style' {
     'Default  *': 'default ',
     'Minimal   ': 'minimal ',
@@ -1835,25 +1837,23 @@
             if ( chat_right == 'start' ) { align-items: flex-start }
         }
         /// Feat -> Fixes for RTL layout. @upstream
-        if ( fix_rtl == 1 ) {
-            &-in .selectable-text.invisible-space[dir = 'rtl'] {
-                > span[class] { display: unset i }
-                @supports (-moz-user-select: none) {
-                    &::after { padding-bottom: 1em i }
+        if (rtl_header && !rtl_layout) {
+            &-in, &-out {
+                .selectable-text.invisible-space[dir = 'rtl'] {
                     &::before { content: unset i }
-                }
-                @supports not (-moz-user-select: none) {
-                    &::after { height: 1em i; display: block i }
                 }
             }
-            &-out .selectable-text.invisible-space[dir = 'rtl'] {
-                > span { display: unset i }
-                @supports (-moz-user-select: none) {
-                    &::after { padding-bottom: 1em i }
-                    &::before { content: unset i }
-                }
-                @supports not (-moz-user-select: none) {
-                    &::after { height: 1em i; display: block i }
+        } else if (rtl_header && rtl_layout) {
+            &-in, &-out {
+                .selectable-text.invisible-space[dir = 'rtl'] {
+                    > span[class] { display: unset i }
+                    @supports (-moz-user-select: none) {
+                        &::after { padding-bottom: 1.35em i }
+                        &::before { content: unset i }
+                    }
+                    @supports not (-moz-user-select: none) {
+                        &::after { height: 1.35em i; display: block i }
+                    }
                 }
             }
         }
