icons: fix played state for audio messages
Closes #151.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -972,7 +972,7 @@
         /// Message info -> Played audio message.
         &[data-icon *= 'ptt-blue'] path { v: ac }
         /// Chat -> Played state for audio messages.
-        &[data-icon *= 'in-green'] path[fill = '#09D261'] { v: green }
+        /._3tiW9 .ptt-status-icon { v: green }
         /// Message status.
         &[data-icon *= '-check'] path { v: cm }
         &[data-icon *= '-dblcheck'] path { v: cm }
