chat: improve RTL msg tweaks and fix edge-cases
By using a slightly different approach, we're able to add padding to the
RTL messages and it will add the right amount of whitespace for text not
to collide with the timestamp.

This also removes tweaks in Chromium-based browsers, and by doing so,
the 'Read more' button is displayed inline with the text instead of
being pushed to the next row.

Huge thanks @E-RELevant for the help!

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1842,14 +1842,13 @@
             }
         } else if (rtl_header && rtl_format) {
             &-in, &-out {
+                [data-pre-plain-text] > [dir = 'rtl'] {
+                    padding-bottom: 1.25em i;
+                }
                 .selectable-text.invisible-space[dir = 'rtl'] {
                     > span[class] { display: unset i }
                     @supports (-moz-user-select: none) {
-                        &::after { padding-bottom: 1.35em i }
                         &::before { content: unset i }
-                    }
-                    @supports not (-moz-user-select: none) {
-                        &::after { height: 1.35em i; display: block i }
                     }
                 }
             }
