--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1834,15 +1834,17 @@
             if ( chat_right == 'start' ) { align-items: flex-start }
         }
         /// Feat -> Fixes for RTL layout. @upstream
-        if (rtl_header && !rtl_format) {
+        if (rtl_header) {
             &-in, &-out {
                 .selectable-text.invisible-space[dir = 'rtl'] {
                     &::before { content: unset i }
                 }
             }
-        } else if (rtl_header && rtl_format) {
+        }
+        if (rtl_format) {
             &-in, &-out {
                 [data-pre-plain-text] > [dir = 'rtl'] {
+                    if (!rtl_header) { padding-top: 1.25em i }
                     padding-bottom: 1.25em i;
                 }
                 .selectable-text.invisible-space[dir = 'rtl'] {
