chat: reset timestamp for messages with media

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1859,6 +1859,9 @@
                         &::before { content: unset i }
                     }
                 }
+                /// Apparently messages with images/videos are treated like
+                /// special snowflakes, so this resets their timestamps.
+                /._3zb-j[dir = 'rtl'] { padding-bottom: 1.25em i }
             }
         }
     }
