modals: fix contacts in 'add participant' modal

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -675,7 +675,7 @@
             ._2EXPL:not(#z):hover { c: 0 0 t }
         }
         /// Add group participants.
-        .I72vi {
+        ._3fOoY {
             c: 0 0 hl;
             overflow: hidden;
             box-shadow: 0 1px bd;
