--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.5.0
+@version      2.6.0
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -194,8 +194,8 @@
         --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
 
-        --version   : 'Dark-WhatsApp v2.5.0 — May 3rd, 2020';
-        --message   : 'Fixed RTL message layout, more info in the changelog. 🎉 🥳 I rewrote my Dark-Instagram theme, check it out at link below.';
+        --version   : 'Dark-WhatsApp v2.6.0 — May 7th, 2020';
+        --message   : 'Improved RTL message hacks, more info in the changelog. 🎉 🥳 I rewrote my Dark-Instagram theme, check it out at link below.';
         --changes   : 'https://github.com/vednoc/dark-instagram';
     }
 
