chat: fix forward button for fb-like tail style

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1652,7 +1652,7 @@
             &-in {
                 /// (first|all|last|single) message(s).
                 [data-icon *= 'tail'] + div, ._2R8MP { rad: 12px 12px 12px 4px i }
-                > div > div { rad: 4px 12px 12px 4px i }
+                > div > div:not(._26fC0) { rad: 4px 12px 12px 4px i }
                 &._1T1d2 + .message-in:not(._1T1d2) {
                     // c: 0 0 right;
                     /// Last message | Groups -> Sticker sender.
@@ -1664,7 +1664,7 @@
             &-out {
                 /// (first|all|last|single) message(s).
                 [data-icon *= 'tail'] + div { rad: 12px 12px 4px 12px i }
-                > div > div { rad: 12px 4px 4px 12px i }
+                > div > div:not(._26fC0) { rad: 12px 4px 4px 12px i }
                 &._1T1d2 + .message-out:not(._1T1d2) {
                     // c: 0 0 left;
                     > div > div { rad: 12px 4px 12px 12px i }
