landing: fix margin for platform-specific border

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -418,6 +418,7 @@
                 }
             }
             /// Platform-specific section border.
+            ._3McX8 { margin-top: 17px i }
             ._1TgXb { c: 0 0 bd }
         }
 
