--- a/wa.user.css
+++ b/wa.user.css
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.6.0
+@version      2.6.1
 @license      MIT
 ==/UserStyle== */
 @-moz-document domain("web.whatsapp.com") {
@@ -49,7 +49,7 @@
     --blur-in: 0.4s;
     --blur-out: 0.2s;
     --ui-font: "custom font", "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial, Ubuntu, Cantarell, "Fira Sans", sans-serif;
-    --version: "Dark-WhatsApp Lite v2.6.0 — May 7th, 2020";
+    --version: "Dark-WhatsApp Lite v2.6.1 — May 9th, 2020";
     --message: "Improved RTL message hacks, more info in the changelog. 🎉 🥳 I rewrote my Dark-Instagram theme, check it out at link below.";
     --changes: "https://github.com/vednoc/dark-instagram";
   }
@@ -277,6 +277,9 @@
     padding-top: 16px;
     content: var(--version);
     border-top: 1px solid var(--darker);
+  }
+  body ._2zynu ._3McX8 {
+    margin-top: 17px !important;
   }
   body ._2zynu ._1TgXb {
     background-color: var(--darker) !important;
@@ -2225,25 +2228,38 @@
     border-radius: 6px;
     fill-opacity: 0.55;
   }
-  #main > footer .Uukb4 {
+  .Uukb4 {
     border-color: var(--darker) !important;
     background-color: var(--dark) !important;
     box-shadow: 0 -1px var(--darker) !important;
   }
-  #main > footer .Uukb4::before {
+  .Uukb4::before {
     content: none;
   }
-  #main > footer .Uukb4 .J6TrU {
-    color: var(--light) !important;
+  .Uukb4 .J6TrU {
+    color: var(--lighter) !important;
     border-color: var(--darker) !important;
     background-color: var(--dark) !important;
   }
-  #main > footer .Uukb4 .J6TrU._1g_fA,
-  #main > footer .Uukb4 .J6TrU:hover {
+  .Uukb4 .J6TrU._1g_fA,
+  .Uukb4 .J6TrU:hover {
+    color: var(--light) !important;
     background-color: var(--darken) !important;
   }
-  #main > footer .Uukb4 ._3SW-z {
+  .Uukb4 .J6TrU ._2u5ts {
     color: var(--lighter) !important;
+  }
+  .Uukb4 ._3SW-z {
+    color: var(--lighter) !important;
+  }
+  .Uukb4.BDk0G {
+    border-left: none !important;
+    background-color: var(--dark) !important;
+  }
+  .Uukb4.BDk0G .J6TrU._1g_fA,
+  .Uukb4.BDk0G .J6TrU:hover {
+    color: var(--light) !important;
+    background-color: var(--darker) !important;
   }
   ._30ie-,
   ._1M0Ew {
