modals: fix keyboard shortcuts modal

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -830,6 +830,11 @@
         /[style *= 'rgb(192\, 193\, 196)'] {
             c: 0 0 bg;
         }
+        /// Global -> Keyboard shortcuts.
+        /._2qhsi {
+            c: fg bd hl;
+            box-shadow: bsh i;
+        }
     }
 
     // Global -> Status.
