--- a/wa.user.css
+++ b/wa.user.css
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.6.1
+@version      2.6.2
 @license      MIT
 ==/UserStyle== */
 @-moz-document domain("web.whatsapp.com") {
@@ -49,7 +49,7 @@
     --blur-in: 0.4s;
     --blur-out: 0.2s;
     --ui-font: "custom font", "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial, Ubuntu, Cantarell, "Fira Sans", sans-serif;
-    --version: "Dark-WhatsApp Lite v2.6.1 — May 9th, 2020";
+    --version: "Dark-WhatsApp Lite v2.6.2 — May 11th, 2020";
     --message: "Improved RTL message hacks, more info in the changelog. 🎉 🥳 I rewrote my Dark-Instagram theme, check it out at link below.";
     --changes: "https://github.com/vednoc/dark-instagram";
   }
@@ -744,6 +744,12 @@
   [style *= "rgb(217, 218, 222)"],
   [style *= "rgb(192, 193, 196)"] {
     background-color: var(--dark) !important;
+  }
+  ._2qhsi {
+    color: var(--light) !important;
+    border-color: var(--darker) !important;
+    background-color: var(--darken) !important;
+    box-shadow: var(--bshadow) !important;
   }
   [data-animate-status-v3-modal-background = "true"] {
     background-color: var(--t) !important;
@@ -1798,10 +1804,6 @@
   .message-in [style *= "height: 55px"] svg path[fill = "#DFE5E7"],
   .message-out [style *= "height: 55px"] svg path[fill = "#DFE5E7"] {
     fill: var(--t) !important;
-  }
-  .message-in.velocity-animating,
-  .message-out.velocity-animating {
-    opacity: 0.4;
   }
   .message-in div[style *= "width"][style *= "height"] + ._1uFFm,
   .message-out div[style *= "width"][style *= "height"] + ._1uFFm,
